Add mention of missing plot for scheduling policies

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -788,6 +788,10 @@ Show the effect of each ``piece'' at a time,
 run X without each in turn and show the difference in either
 quality of solution or runtime or amount of memory, size of cache or queue,
 where X is a specific implementation
+(meaning a specific scheduling policy and node type)
+
+\item Figure~\ref{fig:scheduling-policy}
+Missing:  Some sort of comparison of different scheduling policies
 
 \item Figure~\ref{fig:search-space},
 Fraction of search space we've proven we've handled
@@ -847,8 +851,16 @@ over ten folds, for one big dataset (box plots)}
 Show the effect of each ``piece'' at a time,
 run X without each in turn and show the difference in either
 quality of solution or runtime or amount of memory, size of cache or queue,
-where X is a specific implementation}
+where X is a specific implementation
+(meaning a specific scheduling policy and node type)}
 \label{fig:ablation}
+\end{figure}
+
+\begin{figure}[t!]
+\begin{center}
+\end{center}
+\caption{Missing:  Some sort of comparison of different scheduling policies}
+\label{fig:scheduling-policy}
 \end{figure}
 
 \begin{figure}[t!]
