--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -25,6 +25,8 @@
 \newcommand{\y}{\mathbf{y}}
 \def\RL{{d}}
 \def\Prefix{d_p}
+\def\Labels{\delta_p}
+\def\Default{q_0}
 \def\Obj{\ell}
 \def\Reg{{\lambda}}
 \def\MaxLength{{K_{\text{max}}}}
