Cynthia: unclear that d_p is the full prefix
Use explicit notation to define the confusing rule list and prefix

--- a/paper/content.tex
+++ b/paper/content.tex
@@ -71,7 +71,8 @@ We say that an antecedent~$p_k$ of prefix~$p$ captures~$x_n$ in the context of~$
 if~$p_k$ is the first antecedent in~$p$ that evaluates to true for~$x_n$
 %
 We also say that a prefix captures those data captured by its antecedents;
-for a rule list with prefix~$\Prefix$, data not captured by~$\Prefix$
+for a rule list~${\RL = (\Prefix, \Labels, \Default, K)}$,
+data not captured by the prefix~$\Prefix$
 are classified according to the default label prediction~$\Default$.
 
 Let~$\alpha$ be a single antecedent or an antecedent list,
