--- a/paper/latex_macros.tex
+++ b/paper/latex_macros.tex
@@ -27,7 +27,8 @@
 \def\Prefix{d_p}
 \def\Labels{\delta_p}
 \def\Default{q_0}
-\def\Obj{\ell}
+\def\Obj{R}
+\def\Loss{\ell}
 \def\Reg{{\lambda}}
 \def\MaxLength{{K_{\text{max}}}}
 \def\RuleSet{{\mathcal S}}
